Após a defesa final

--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Home/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Home/Index.cshtml
@@ -39,9 +39,9 @@
             <div class="col-md-12 col-lg-6 col-xl-4">
                 <div class="card mb-2">
                     <img class="card-img-top" src="~/dist/img/photo3.jpg" alt="Dist Photo 3">
-                    <div class="card-img-overlay">
+                    <div class="card-img-overlay d-flex flex-column justify-content-end">
                         <h5 class="card-title text-primary">Adianntamento salarial</h5>
-                        <p class="card-text pb-1 pt-1 text-white">
+                        <p class="card-text text-white pb-2 pt-1">
                             Adiantamos até 3 salários <br>
                             aos nossos associados,<br>
                             tornando os seus projectos <br>
