--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -158,12 +158,12 @@
                                         <i class="fas fa-search nav-icon"></i>
                                         <p>
                                             Pesquisar
-                                            <span class="right badge badge-success">New</span>
+                                            @* <span class="right badge badge-success">New</span> *@
                                         </p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a asp-controller="Socio" asp-action="Create" class="nav-link">
+                                    <a href="/Socio/Create" class="nav-link">
                                         <i class="far fa-plus-square nav-icon"></i>
                                         <p>Criar</p>
                                     </a>
@@ -171,7 +171,10 @@
                                 <li class="nav-item">
                                     <a href="/SolicitacoesDeclaracao/Index" class="nav-link">
                                         <i class="fas fa-address-card nav-icon"></i>
-                                        <p>Solicitações de Decl.</p>
+                                        <p>
+                                            Solic. de declaração
+                                            <span class="right badge badge-success">New</span>
+                                        </p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
