--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Home/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-md-4">
-        <a asp-controller="Municipio" asp-action="Index" class="info-box">
+        <a href="#" class="info-box">
             <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-chart-pie"></i></span>
 
             <div class="info-box-content">
