--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Shared/_Layout.cshtml
@@ -183,7 +183,7 @@
                                             <i class="fas fa-search nav-icon"></i>
                                             <p>
                                                 Pesquisar
-                                            <span class="right badge badge-success">New</span>
+                                            @* <span class="right badge badge-success">New</span> *@
                                             </p>
                                         </a>
                                     </li>
@@ -197,7 +197,10 @@
                                     <li class="nav-item">
                                         <a href="/SolicitacoesDeclaracao/Index" class="nav-link">
                                             <i class="fas  fa-hands-helping nav-icon"></i>
-                                            <p>Solicitações de Decl.</p>
+                                            <p>
+                                                Solic. de declaração
+                                                <span class="right badge badge-success">New</span>
+                                            </p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
